module12/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpserver
    hosts:
    - "xxx.xxx.com"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpserver-vs
spec:
  hosts:
  - "xxx.xxx.com"
  gateways:
  - httpserver-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: httpserver-svc
